--- a/src/App.css
+++ b/src/App.css
@@ -92,6 +92,7 @@ header{
     align-items: center;
     -webkit-box-sizing: border-box;
     box-sizing: border-box;
+    z-index: 0;
 }
 .settings> *{
     -ms-flex-preferred-size: 25%;
@@ -107,6 +108,7 @@ header{
 .settings .search{
     position: relative;
 }
+.settings .search-phone input,
 .settings .search input{
     text-align: center;
     border: none;
@@ -130,10 +132,12 @@ header{
 .settings .search .matches{
     margin-left: 5px;
 }
+.settings .search .matches-phone,
 .settings .sort-phone,
 .settings .search-phone{
     display: none;
 }
+.settings .sort-phone select,
 .settings .sort select{
     text-transform: uppercase;
     width: 150px;
@@ -175,6 +179,7 @@ header{
     display: -ms-flexbox;
     background-color: rgba(233,233,233,1);
     padding: 15px;
+    z-index: 0;
 
 }
 .settings .filters .filters-content>*{
@@ -625,10 +630,30 @@ header{
         -webkit-box-pack: start;
         -ms-flex-pack: start;
         justify-content: flex-start;
+        position: fixed;
+        z-index: 100;
     }
+  
     .basketList{
-        left: 5%;
-        width: 90%;
+        left: 2%;
+        width: 96%;
+        -webkit-box-sizing: border-box;
+        box-sizing: border-box;
+    }
+    .basketList .list{
+        padding-top: 15px;
+    }
+    .basketList .list .item{
+        min-height: 14px;
+        font-size: 14px;
+        line-height: 14px;
+        margin-bottom: 10px;
+        padding-bottom: 10px;
+
+    }
+    .basketList .list .item .removeItem{
+        font-size: 14px;
+        margin-right: 5px;
     }
     .settings{
         -webkit-box-orient: vertical;
@@ -644,6 +669,13 @@ header{
         -ms-flex-preferred-size: 100%;
         width: 100%;
         text-align: center;
+        
+    }
+    .settings .matches-phone{
+        margin-left: 15px;
+    }
+    .settings .matches{
+        display: none;
     }
     .settings>div:last-of-type{
         text-align: center;
@@ -662,8 +694,15 @@ header{
     .settings .search-phone{
         display: block;
     }
+    .settings .search-phone input{
+        width: 70%;
+        margin: auto;
+    }
+    .settings .filters {
+    }
     .settings .filters .filters-content{
         top:25px;
+        position: absolute;
         display: -webkit-box;
         display: -ms-flexbox;
         display: flex;
@@ -671,9 +710,23 @@ header{
         -webkit-box-direction: normal;
         -ms-flex-direction: column;
         flex-direction: column;
+        padding: 0;
+        padding-bottom: 10px;
+        z-index: 0;
+
+    }
+    
+    .settings .filters .filters-content>*{
+        margin-top: 8px;
+        
+    }
+    .productsList{
+        padding-top: 120px;
     }
     .product{   
         width: 100%;
+        -webkit-box-sizing: border-box;
+        box-sizing: border-box;
     }
     .product img{
         height: 70px;    
@@ -681,9 +734,11 @@ header{
     .product h3{
         font-size: .7rem;
     }
+  
     .product .buy .add-to-basket{
         width: 110px;
         font-size: .8rem;
+        margin-right: 5px;
     }
     .product .buy .price{
         font-size: .7rem;
@@ -696,5 +751,19 @@ header{
     .showMoreBtn{
         font-size: 1rem;
         width: 90%;
+    }
+    .details .wrapper{
+        width: 96%;
+        -webkit-box-sizing: border-box;
+        box-sizing: border-box;
+        left: 2%;
+        top: 90px;
+    }
+    .details .wrapper .content{
+        display: block;
+    }
+    .details .wrapper .content .image{
+        float: left;
+        height: 150px;
     }
 }
