--- a/src/App.css
+++ b/src/App.css
@@ -25,6 +25,7 @@ header{
     -webkit-box-sizing: border-box;
     box-sizing: border-box;
 }
+
 .basket-header{
     position: absolute;
     top: 0;
@@ -73,7 +74,9 @@ header{
     background-color: transparent;
 }
 
-
+.loading{
+    padding-top: 200px;
+}
 /*settings*/
 .settings{
     border-bottom: 1px solid rgba(33,33,33,1);
@@ -132,7 +135,7 @@ header{
 .settings .search .matches{
     margin-left: 5px;
 }
-.settings .search .matches-phone,
+.settings .matches-phone,
 .settings .sort-phone,
 .settings .search-phone{
     display: none;
@@ -220,6 +223,30 @@ header{
     border-bottom: 1px solid rgba(33,33,33,1);
 }
 
+/*loader*/
+.loading{
+    text-align: center;
+    padding-top: 160px;
+}
+.loading .loader{
+    height: 30px;
+    width: 30px;
+    margin: 0 auto;
+    margin-top: 10px;
+    border: 6px solid rgba(233,233,233,1);
+    border-radius: 50%;
+    border-bottom: 6px solid rgba(6, 113, 2,1);
+    -webkit-animation: loader 1s ease-in-out infinite;
+    animation: loader 1s ease-in-out infinite;
+}
+@-webkit-keyframes loader{
+    0%{-webkit-transform: rotate(0deg);transform: rotate(0deg)}
+    100%{-webkit-transform: rotate(360deg);transform: rotate(360deg)}
+}
+@keyframes loader{
+    0%{-webkit-transform: rotate(0deg);transform: rotate(0deg)}
+    100%{-webkit-transform: rotate(360deg);transform: rotate(360deg)}
+}
 
 /*products*/
 .productsList{
@@ -743,6 +770,15 @@ header{
     .product .buy .add-to-basket div span{
         width: 30px;
         height: 30px;
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
+        -webkit-box-pack: center;
+        -ms-flex-pack: center;
+        justify-content: center;
+        -webkit-box-align: center;
+        -ms-flex-align: center;
+        align-items: center;
        
     }
     .product .buy .add-to-basket div input{
